<resources>
    <string name="app_name">Visit</string>
    <string name="login_acount">请输入账号</string>
    <string name="login_pasw">请输入密码</string>
    <string name="login">登陆</string>
    <string name="login_bottom_text">深圳市小黑熊信息技术版权所有</string>
    <string name="network_unavailing">您当前网络不可用，请打开网络...</string>
    <string name="request_error">网络繁忙，请稍候再试</string>
    <string name="vedio">录视频</string>
    <string name="picture">拍照</string>
    <string name="voice">录语音</string>
    <string name="call">打电话</string>
    <string name="company">查企业</string>
    <string name="card">查身份证</string>
    <string name="street">查地区街道办</string>
    <string name="police">查地区派出所</string>
    <string name="version">版本更新</string>
    <string name="exit">退出应用</string>
    <string name="out_bround_address">外访地址</string>
    <string name="out_bround_record">未标记完成外访单/未外访单</string>
    <string name="out_bround_submit">业绩统计</string>
    <string name="login_faile">登陆失败</string>
    <string name="app_exit">确定退出应用</string>
    <string name="look_cardID">查看证件号码</string>
    <string name="modify_address">修改地址</string>
    <string name="confirm_delete">确定删除</string>
    <string name="out_visit">外访详情</string>
    <string name="visit_order">外访单</string>
    <string name="visit_detail_msg">详细信息</string>
    <string name="detail_relation_info">关联信息</string>
    <string name="item_detail_phone">案件电话</string>
    <string name="item_detail_tag">&gt;</string>
    <string name="item_detail_address">案件地址</string>
    <string name="item_detail_progress">催收记录</string>
    <string name="item_detail_return_message">回款信息</string>
    <string name="item_detail_follow_message">跟进信息记录</string>
    <string name="item_detail_operator_record">案件操作记录</string>
    <string name="item_detail_associated_data">关联资料</string>
    <string name="item_detail_row_case">外访记录</string>
    <string name="item_card_details">卡信息/案件金额信息/备注/证件号</string>
    <string name="item_card_file">文件查询</string>
    <string name="version_check">版本检查</string>
    <string name="software_version">软件版本：</string>
    <string name="file_size">更新时间：</string>
    <string name="program_to_open_such_files_not_found">没有找到打开此类文件的程序</string>
    <string name="please_make_sure_open_the_sd_card_access">请先确定SD卡访问权限已开启</string>
    <string name="new_version_found">发现新版本</string>
    <string name="version_update_new">版本更新中</string>
    <string name="found_the_new_version">发现新版本</string>
    <string name="cancel_update">取消更新</string>
    <string name="update_content">更新内容：</string>
    <string name="update_now">立即更新</string>
    <string name="modify_account_face">切换人脸或者账号</string>
    <string name="later">以后再说</string>
    <string name="visit_operation">操作</string>
    <string name="default_file_name">My Recording</string>
    <string name="upload_picture">上传图片</string>
    <string name="upload_select_picture">请选择图片</string>
    <string name="upload_pictureing">上传图片中...</string>
    <string name="upload_record">上传录音中...</string>
    <string name="upload_fieling">上传文件中...</string>
    <string name="video_compress">请压缩视频</string>
    <string name="upload_video">上传视频中...</string>
    <string name="detail_attachment">外访资料</string>
    <string name="check_imei_state">请在服务端授权设备...</string>
    <string name="link_devices">设备连接中...</string>
    <string name="dail_phone">拨打该号码</string>
    <string name="welcome_text">万乘金融服务集团</string>
    <string name="error_view_no_data">无数据点击加载更多...</string>
    <string name="error_view_loading">加载错误...</string>
    <string name="nodata_now">暂无数据...</string>
    <string name="nodata_sucess">数据加载成功...</string>
    <string name="submit_data_ing">正在提交数据请稍后...</string>
    <string name="submit_data_complete">提交</string>
    <string name="error_view_load_error_click_to_refresh">加载错误点击刷新界面...</string>
    <string name="error_view_network_error_click_to_refresh">网络错误点击刷新...</string>
    <string name="is_download_the_latest_version_please_later">正在下载最新版本，请稍后&#8230;</string>
    <string name="software_introduce">本软件适用于催收系统，外访人员外出拜访债务人的软件.\n主要功能：外访单，历史外访单，百度地图定位，导航，录音，视频，拍照，文件上传等.\n技术支持微信/QQ：1243792387 </string>
    　　　　<string-array name="RelationEnum">
        　　　　　<item> 夫妻</item>
        　　　　　<item>父母</item>
        　　　　　<item>子女</item>
                　<item>朋友</item>
                　<item>同事</item>
                　<item>本人</item>
                　<item>亲戚 </item>
                　<item>担保人</item>
                　<item>老板</item>
                　<item>邻居</item>
                　<item>兄弟姐妹</item>
                　<item>其他</item>
    　　　　</string-array>

    　　　<string-array name="PhoneTypeEnum">
    　　　　　<item> 手机</item>
    　　　　　<item>住宅</item>
    　　　　　<item>单位</item>
        　    <item>户籍</item>
    　        <item>家庭</item>
    　        <item>其他</item>
    　　　　</string-array>
    　　　<string-array name="PhoneStatusEnum">
    　　　　　<item>未知电话</item>
    　　　　　<item>有效电话</item>
    　　　　　<item>无效电话</item>
    　　　　</string-array>
    　　　<string-array name="AddressTypeEnum">
    　　　　　<item> 户籍地址</item>
    　　　　　<item>住宅地址 </item>
    　　　　　<item>公司地址</item>
            　<item>家庭地址</item>
    　        <item>对账单地址</item>
            　<item>抵押物地址</item>
            　<item>开卡地址</item>
            　<item>邮件地址</item>
            　<item>IM号码</item>
            　<item>未知地址</item>
            　<item>其他</item>
    　　　　</string-array>
         <string-array name="AddressStatus">
        　　　　　<item>未知</item>
        　　　　　<item>有效</item>
        　　　　　<item>无效</item>
        　　　　</string-array>

        <string-array name="CidTypeEnum">
            　　<item>身份证</item>
            　　<item>居住证</item>
            　　<item>签证</item>
            　<item>护照</item>
            　<item>户口本</item>
            　<item>军人证</item>
            　<item>团员证</item>
            　<item>党员证</item>
            　<item>港澳通行证</item>
            　<item>其他</item>
            　</string-array>
         <string-array name="GenderEnum">
        　　<item>女</item>
        　　<item>男</item>
         　<item>其他</item>
        　</string-array>
    <string-array name="ContactSummaryEnum">
        　　<item>无</item>
        　　<item>未接通</item>
        　　<item>联系到本人</item>
        　<item>联系到亲属</item>
        　<item>联系到认识人</item>
        　<item>不认识</item>
        　</string-array>

    <string-array name="ContactResultEnum">
        　　<item>无</item>
        　　<item>联系到本人</item>
        　　<item>联系到关联人</item>
        　<item>承诺还款</item>
        　<item>谈判协商</item>
        　<item>第三方转告</item>
        <item>争议办卡</item>
        <item>无人接听</item>
        <item>空号</item>
        <item>关机</item>
        <item>停机=</item>
        <item>通话中</item>
        <item>不是本人</item>
        <item>号码过期</item>
        <item>拒绝接听</item>
        <item>来电提醒</item>
        <item>多通无接</item>
        <item>无法接通</item>
        <item>电话故障</item>
        <item>未达成还款协议</item>
        <item>无法联系</item>
        <item>已还款</item>
        <item>新增电话</item>
        <item>其他</item>
        　</string-array>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="notification_live_start">通知开始</string>
</resources>
