<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvRelationInfo"
        style="@style/ModuleTitle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/detail_relation_info" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/dark_blue" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout"
        android:orientation="horizontal" >

        <include
            android:id="@+id/icRelativeLayoutPhoneNotification"
            layout="@layout/notification"
            android:visibility="invisible" >
        </include>

        <TextView
            android:id="@+id/tvItemPhone"
            style="@style/ModuleItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/item_detail_phone" />

        <TextView
            style="@style/ModuleItemTag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBaseline="@+id/tvItemPhone"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvItemPhone"
            android:text="@string/item_detail_tag" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_blue" >
    </View>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_Address"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout"
        android:orientation="horizontal" >

        <include
            android:id="@+id/icRelativeLayoutAddressNotification"
            layout="@layout/notification"
            android:visibility="invisible" >
        </include>

        <TextView
            android:id="@+id/tvItemAddress"
            style="@style/ModuleItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/item_detail_address" />

        <TextView
            style="@style/ModuleItemTag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBaseline="@+id/tvItemAddress"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvItemAddress"
            android:text="@string/item_detail_tag" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_blue" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_urge_recode"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvItemProgress"
            style="@style/ModuleItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/item_detail_progress" />

        <TextView
            style="@style/ModuleItemTag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBaseline="@+id/tvItemProgress"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvItemProgress"
            android:text="@string/item_detail_tag" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_blue" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_visit_record"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvItemRowCase"
            style="@style/ModuleItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/item_detail_row_case" />

        <TextView
            style="@style/ModuleItemTag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBaseline="@+id/tvItemRowCase"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvItemRowCase"
            android:text="@string/item_detail_tag" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_blue" >
    </View>
    <RelativeLayout
        android:id="@+id/rl_visit_file_query"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_file_query"
            style="@style/ModuleItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/item_card_file" />

        <TextView
            style="@style/ModuleItemTag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBaseline="@+id/tv_file_query"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_file_query"
            android:text="@string/item_detail_tag" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_blue" >
    </View>


    <RelativeLayout
        android:id="@+id/rl_visit_cord_detail"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_card_detail"
            style="@style/ModuleItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/item_card_details" />

        <TextView
            style="@style/ModuleItemTag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBaseline="@+id/tv_card_detail"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_card_detail"
            android:text="@string/item_detail_tag" />
    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_blue" >
    </View>

</LinearLayout>